tests/ui/impl-restriction/feature-gate-impl-restriction.without_gate.stderr
error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:9:5
   |
LL | pub impl(crate) trait Bar {}
   |     ^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:10:5
   |
LL | pub impl(in crate) trait BarInCrate {}
   |     ^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:13:9
   |
LL |     pub impl(in crate::foo) trait Baz {}
   |         ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:14:16
   |
LL |     pub unsafe impl(super) trait BazUnsafeSuper {}
   |                ^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:15:14
   |
LL |     pub auto impl(self) trait BazAutoSelf {}
   |              ^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:16:15
   |
LL |     pub const impl(in self) trait BazConst {}
   |               ^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:19:13
   |
LL |         pub impl(in crate::foo::foo_inner) trait Qux {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:20:25
   |
LL | ...   pub unsafe auto impl(in crate::foo::foo_inner) trait QuxAutoUnsafe {}
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:21:26
   |
LL | ...   pub const unsafe impl(in crate::foo::foo_inner) trait QuxConstUnsafe {}
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:25:9
   |
LL |     pub impl(crate) trait Bar {}
   |         ^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:27:9
   |
LL |     pub impl(in crate) trait BarInCrate {}
   |         ^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:29:16
   |
LL |     pub unsafe impl(self) trait BazUnsafeSelf {}
   |                ^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:31:14
   |
LL |     pub auto impl(in super) trait BazAutoSuper {}
   |              ^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:33:15
   |
LL |     pub const impl(super) trait BazConstSuper {}
   |               ^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:37:13
   |
LL |         pub impl(in crate::foo::cfged_out_foo) trait CfgedOutQux {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:38:25
   |
LL | ...   pub unsafe auto impl(in crate::foo::cfged_out_foo) trait CfgedOutQuxUnsafeAuto {}
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/feature-gate-impl-restriction.rs:39:26
   |
LL | ...   pub const unsafe impl(in crate::foo::cfged_out_foo) trait CfgedOutQuxConstUnsafe {}
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 17 previous errors

For more information about this error, try `rustc --explain E0658`.
